WebRoot/WEB-INF/classes/iptables
# Generated by iptables-save v1.4.7 on Sat Sep 22 01:18:36 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [18:6304]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8081 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j DROP 
-A INPUT -p tcp -m tcp --dport 943 -j DROP 
-A INPUT -p tcp -m tcp --dport 22222 -j DROP 
-A INPUT -p tcp -m tcp --dport 22221 -j DROP 
-A INPUT -p udp -m udp --dport 22222 -j DROP 
-A INPUT -p udp -m udp --dport 22221 -j DROP 
-A INPUT -p tcp -m tcp --dport 8080 -j DROP 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Sat Sep 22 01:18:36 2018
